# api-talib-awn

./: main.py  requirements.txt  server.py
api/config/: db.php  env.php
api/cron/: cancel_deals.php  release_payments.php
api/helpers/: auth.php  fee.php  response.php
api/routes/: admin.php  applications.php  auth.php  chat.php  conversations.php  deals.php  deposits.php  jobs.php  notifications.php  payments.php
backend/: pyproject.toml  server.py
